--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 	<title>Auto's in Nederland</title>
 </head>
 <body>
-	<noscript>This website is built with JavaScript. Turn on JavaScript to view the page</noscript>
+	<noscript>This website is built with JavaScript. Turn on JavaScript to view the page.</noscript>
 	<div id="app"></div>
 </body>
 </html>
